--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
     "react-scripts": "0.9.x",
+    "redux": "^3.7.2",
     "redux-promise": "^0.5.3"
   },
   "devDependencies": {},
