--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "react-scripts": "0.9.x",
+    "react-sparklines": "^1.7.0",
     "redux": "^3.7.2",
     "redux-promise": "^0.5.3"
   },
