--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-google-maps": "^9.0.1",
     "react-redux": "^5.0.6",
     "react-scripts": "0.9.x",
     "react-sparklines": "^1.7.0",
