--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
+    "react-google-map": "^3.1.0",
     "react-google-maps": "^9.0.1",
+    "react-google-maps-loader": "^3.0.1",
     "react-redux": "^5.0.6",
     "react-scripts": "0.9.x",
     "react-sparklines": "^1.7.0",
